@@ -10,6 +10,7 @@ Maintenance
 * When checking DICOM allowed methods, if there are multiple modalities with the same AET, 
   differentiate them from the calling IP
 * Enable the access to raw frames in Philips ELSCINT1 proprietary compression
+* New configuration option "SyncStorageArea"
 
 
 Version 1.7.3 (2020-08-24)
